--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "UberSafe",
-    "slug": "UberSafe",
+    "name": "PinSafe",
+    "slug": "pinsafe",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
